# 
#        #=======================================================#     _\|/_
#       #  __  _____           ___                    ___       #       /|\
#      #  /      |      ^     |   \  |         ^     |   \     #           _\|/_
#     #   \__    |     / \    |___/  |        / \    |___/    #             /|\
#    #       \   |    /___\   |  \   |       /___\   |   \   #  _\|/_
#   #     ___/   |   /     \  |   \  |____  /     \  |___/  #    /|\
#  #                                                       #             _\|/_
# #=======================================================#               /|\
#
##
##	include/Makefile.am
##..............................................................................
##	Sep 2004		Steve McMillan
##..............................................................................
##

# Header files to install.  List them here with nobase_ so the
# subdirectory structure will be preserved on installation.

nobase_pkginclude_HEADERS = bound3.h chydro.h config.h \
    c_stdinc.h diag.h _dyn_.h dyn.h \
    dyn_kepler.h grape4.h grape6.h hdyn.h \
    hdyn_kepler.h hydrobase.h hydro.h kepler.h \
    kira.h node.h pdyn.h pp3_widget.h \
    scatter3.h scatter.h sdyn3.h sdyn.h \
    sigma3.h slow_binary.h stamp-h.in \
    starbase.h star/black_hole.h star/brown_dwarf.h \
    star/cluster_support.h star/constants.h \
    star/constants_new.h star/disintegrated.h \
    star/double_star.h star/double_support.h \
    star/dstar_to_dyn.h star/dstar_to_kira.h \
    star/general_support.h star/giant.h \
    star/helium_giant.h star/helium_star.h \
    star/hertzsprung_gap.h star/horizontal_branch.h \
    star/hyper_giant.h starlab_vector.h \
    star/main_sequence.h star/neutron_star.h \
    star/planet.h star/proto_star.h star/seba.h \
    star/single_star.h star/SPZDCH_star.h \
    star/sstar_to_dyn.h star/star_cluster.h \
    star/stardyn_util.h star/star.h star/star_state.h \
    star/star_support.h star/stdfunc.h \
    star/stellar_type.h star/sub_giant.h \
    star/super_giant.h star/thorne_zytkow.h \
    star/white_dwarf.h static_star.h stdinc.h \
    story.h tdyn.h util_io.h util_math.h \
    worldline.h xreal.h hop.h

clean:
distclean:
maintainer-clean:
	@echo Nothing to clean
